<resources>
    <string name="no_network">没有可用的网络</string>
    <string name="network_fail_tip">服务器连接失败，请稍后重试</string>
    <string name="service_error">服务器数据错误</string>
    <string name="lib_cancel">取消</string>
    <string name="lib_sureTitle">确定</string>
    <string name="lib_cancelTitle">取消</string>
    <string name="lib_noteTitle">提示</string>
    <string name="lib_connectionErrorMsg1">网络错误,请确保你的连接可用,点击确定去设置网络。</string>
    <string name="retry_after_conneted">请连接网络后重试</string>
    <string name="loading">加载中...</string>
    <string name="empty_message">No items yet</string>
    <string name="loading_message">Please wait</string>
    <string name="error_message">Oops! Something wrong happened</string>
    <string name="empty_button">Try again</string>
    <string name="loading_button">Cancel</string>
    <string name="error_button">Try again</string>
    <string name="xlistview_header_hint_loading">加载中</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放刷新</string>
    <string name="xlistview_footer_hint_ready">释放加载更多</string>
    <string name="xlistview_footer_hint_no_more">没有更多了</string>
    <string name="xlistview_footer_hint_normal">上拉加载更多</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">释放刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中</string>
    <string name="pull_to_complete_lable">加载完成</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_release_label_no_more">Last page</string>
    <string name="pull_to_refresh_footer_pull_label">pull up to load more</string>
    <string name="app_name">牛呗</string>
    <string name="homepage">首页</string>
    <string name="my">我的</string>
    <string name="more">更多</string>
    <string name="home_to_loan">快速借款</string>
    <string name="home_to_invest">我要投资</string>
    <string name="money_tree">摇钱树</string>
    <string name="home_rank">牛榜单</string>
    <string name="toreg">注册</string>
    <string name="tologin">登 录</string>
    <string name="toLogin2">登录</string>
    <string name="reg_tip_name">手机号</string>
    <string name="reg_tip_code">验证码</string>
    <string name="voice_verification_code"><Data>收不到短信？试试&lt;font color=#0778C9>语音验证&lt;/font></Data></string>
    <string name="changepwd_old_tip">原密码</string>
    <string name="changepwd_new_tip">新密码</string>
    <string name="changepwd_re_tip">确认新密码</string>
    <string name="reg_tip_pwd">输入登录密码</string>
    <string name="reg_tip_repwd">确认登录密码</string>
    <string name="reg_tip_recommend_code">邀请码</string>
    <string name="veri_loginname">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-_0123456789</string>
    <string name="veri_idcard">Xx0123456789</string>
    <string name="agreement_reg">我已阅读并同意《用户服务协议》</string>
    <string name="get_mobile_code">获取验证码</string>
    <string name="agreemeng_getaddress">通过通讯录找到好友</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="to_now">至今</string>
    <string name="experience_now">立即体验</string>
    <string name="service_tip">提示</string>
    <string name="service_update">服务器正在更新中。。。</string>
    <string name="login_other_place_error">你的账户已在其他设备上登录，如果不是本人操作，请注意账户安全。</string>
    <string name="registration_number">账号</string>
    <string name="registration_password">密码</string>
    <string name="gesture_set_tip_motify">输入原手势密码</string>
    <string name="gesture_set_tip_step1">输入手势密码</string>
    <string name="gesture_set_tip_step2">再次输入手势密码</string>
    <string name="gesture_set_tip_error">两次输入不一致，请重新输入</string>
    <string name="tip_address_find">"开启通讯录权限
系统会帮助你找到通讯录中使用牛呗的好友"</string>
    <string name="sendmsg_invite_friend">懂你的牛呗，大家都在玩，立马加入，和我一起玩耍吧  </string>
    <string name="app_download_url">https://promo.niuwap2p.com/mapp/niubei</string>
    <string name="photo_upload_text">拍照上传</string>
    <string name="albums_upload_text">选择本地图片</string>
    <string name="sdcard_not_exists">Sdcard卡不存在</string>
    <string name="photo_fail">拍照失败</string>
    <string name="nick_name_tip">昵称：  </string>
    <string name="user_name">用户名：  </string>
    <string name="signtxt">个性签名</string>
    <string name="credit_level">信用等级</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="idcard_number">身份证</string>
    <string name="idcard_picture">身份证照</string>
    <string name="idcard_picture_tip">请上传您的身份证正反面及手持照片</string>
    <string name="student_idcard_picture">学生证照</string>
    <string name="student_idcard_picture_tip">请上传您的学生证照片</string>
    <string name="school_area">学校所在地</string>
    <string name="school_area_hint">请选择学校所在地</string>
    <string name="school_location">地区</string>
    <string name="school">学校</string>
    <string name="school_hint">请选择学校</string>
    <string name="departments">院系</string>
    <string name="departments_hint">请输入院系</string>
    <string name="professiona">专业</string>
    <string name="professiona_hint">请输入专业</string>
    <string name="enteryear">入学年份</string>
    <string name="enteryear_hint">请选择入学年份</string>
    <string name="education">学历</string>
    <string name="education_hint">请选择学历</string>
    <string name="friendly_hint">请输入你本人真实学籍信息，认证通过后信息不能修改</string>
    <string name="info_confirm">确认无误</string>
    <string name="info_confirm_again">确认学籍信息</string>
    <string name="birthday">生日</string>
    <string name="constellationl">星座</string>
    <string name="parents_location">父母所在地</string>
    <string name="relationship">感情状态</string>
    <string name="label">标签</string>
    <string name="secret">保密</string>
    <string name="tip_award_information">在校情况</string>
    <string name="tip_exercitation">工作经历</string>
    <string name="tip_business">创业经历</string>
    <string name="tip_dream">梦想        </string>
    <string name="add_friend">添加为好友</string>
    <string name="update_headPic">更换头像</string>
    <string name="new_friend_tip">你有新的好友哦</string>
    <string name="add_friend_error">好友信息错误，无法添加，请重试</string>
    <string name="remark_relation_tip">关系标签（已选择%d个）</string>
    <string name="remark_personal_tip">个性标签（已选择%d个）</string>
    <string name="addfriend_leavemessage">填写留言，以便对方通过你的申请</string>
    <string name="addfriend_send_success">申请发送成功</string>
    <string name="account_opened">资金开户</string>
    <string name="account_not_open">资金未开户</string>
    <string name="school_vetifyed">学籍认证</string>
    <string name="school_not_vetify">学籍未认证</string>
    <string name="idcard_auth_count_over">今天你已达到2次认证上限，请明天再来</string>
    <string name="borrowing_loan">借款金额</string>
    <string name="borrow_tip">借款费用</string>
    <string name="loan_duration">借款期限</string>
    <string name="next_step">下一步</string>
    <string name="idcard_auth_tip">请先进行身份认证</string>
    <string name="loan_micro_name">牛小宝</string>
    <string name="loan_clain">"1、首次借款需要开通资金托管账户、进行学籍认证，然后激活信用额度。

2、激活信用额度时，牛呗根据你的信用评分为你计算出一个信用额度，以后就可以随时借入不高于信用额度的资金。

3、如果需要提高信用额度，就去信用修炼术提升自己的信用评分吧"</string>
    <string name="loan_no_loanrecord">暂无借款信息</string>
    <string name="loan_amount_to_little">你的信用额度太低，无法借款</string>
    <string name="borrow_apply_tip">信用额度：%s元</string>
    <string name="hightest_loan">最高额度</string>
    <string name="canuse_loan">信用额度</string>
    <string name="canuse_credit_loan">附加额度</string>
    <string name="change_amount_tip">想更改额度？</string>
    <string name="total_loan">总额度：1000元</string>
    <string name="payment_amount">还款金额</string>
    <string name="borrow_payment_tip">到期应还</string>
    <string name="borrow_payment_duration">距离还款</string>
    <string name="payment_date">到期还款日</string>
    <string name="overdue_days">逾期天数</string>
    <string name="payment_detail_time">到期还款时间</string>
    <string name="borrowing">借 款</string>
    <string name="borrowing_success">借款成功</string>
    <string name="immediate_withdrawal">立即提现</string>
    <string name="look_borrowing_record">查看借款记录</string>
    <string name="payment_actual_date">还款时间</string>
    <string name="loan_confirm">确认借款</string>
    <string name="loan_getcode_tip">请输入绑定手机%s收到的验证码</string>
    <string name="agreement_left">我已阅读并同意</string>
    <string name="loan_brokerage_agreenment">《借款人居间服务协议》</string>
    <string name="loan_agreenment">《借款协议》</string>
    <string name="loan_charge_agreement">《资费标准及说明》</string>
    <string name="redpackage_cash">现金红包</string>
    <string name="effective_long">长期有效</string>
    <string name="redpackag_status">状态</string>
    <string name="loan_date">签约时间</string>
    <string name="borrow_payment_line_of_credit">信用额度</string>
    <string name="borrow_payment_credit_score">信用评分：</string>
    <string name="borrow_payment_per_issue_tip">每期应还</string>
    <string name="borrow_payment_next_time">下一还款日</string>
    <string name="withdraw">提现</string>
    <string name="go_back">返回</string>
    <string name="loan_wait_tip">借款申请已提交，请留意消息中心最新消息</string>
    <string name="loan_first_application_name">牛大款</string>
    <string name="loan_credit_limit_all">信用额度：%s元</string>
    <string name="payment_for_item">每期应还</string>
    <string name="this_term_payment">本期应还</string>
    <string name="this_term_over_due">已逾期</string>
    <string name="loan_friendship_reminder_hints"><Data>今天还款可避免&lt;font color=#E78080>%s元&lt;/font>逾期费用损失请珍惜信用</Data></string>
    <string name="borrowing_service_tip">"您的借款已入账，并开始计息
请先支付借款服务费，方可提现"</string>
    <string name="borrowing_service_charge">借款服务费</string>
    <string name="borrowing_service_pay">支付</string>
    <string name="borrowing_service_back">返回首页</string>
    <string name="payment_amount_tip">应还金额</string>
    <string name="payment_btn_txt">还 款</string>
    <string name="payment_account">还款资金</string>
    <string name="today_payment">今日应还</string>
    <string name="should_interest_total">应还利息</string>
    <string name="interest_total">利息总计</string>
    <string name="DRIThisTerm">当期利息</string>
    <string name="should_cost_total">应还费用</string>
    <string name="cost_total">费用总计</string>
    <string name="DRCThisTerm">当期费用</string>
    <string name="borrowing_date">借款日期</string>
    <string name="payment_overdue_tips">      如果你不立即偿还，我们将根据协议约定，把你的逾期信息上报征信机构。</string>
    <string name="select_payment_date">还款期</string>
    <string name="fund_hosting_account">资金托管账户</string>
    <string name="credit_score">信用评分</string>
    <string name="borrowing_record">借款记录</string>
    <string name="rewardmanager">奖励管理</string>
    <string name="select_reward">选择奖励</string>
    <string name="friends">好友</string>
    <string name="my_list">我的牛榜单</string>
    <string name="credit_superman">信用达人</string>
    <string name="planinvest">我的懒牛</string>
    <string name="canuse_balance">可用余额</string>
    <string name="pay">充值</string>
    <string name="withdrawal">提现</string>
    <string name="fund_record">资金记录</string>
    <string name="recharge_tip">充值金额</string>
    <string name="tip_real_name">真实姓名</string>
    <string name="tip_input_idcard">身份证号</string>
    <string name="registration_code_ed_hint">请输入学信网在线验证码</string>
    <string name="no_security_code">什么是在线验证码</string>
    <string name="submit">提 交</string>
    <string name="setting_item1">密码管理</string>
    <string name="setting_item2">意见反馈</string>
    <string name="setting_item3">帮助中心</string>
    <string name="setting_item4">检查更新</string>
    <string name="setting_item5">关于我们</string>
    <string name="setting_item6">联系我们</string>
    <string name="setting_item7">退出登录</string>
    <string name="setting_service_tel">400-8846-898</string>
    <string name="setting_phone_number">修改手机号码</string>
    <string name="submit_registration_code_tip">验证费用将在成功后返还到您的可用余额中</string>
</resources>