<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/public_back_grey"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/layout_public_title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/title_ht">
        <LinearLayout android:layout_marginTop="0.0dip" style="@style/public_main_frame">
            <View style="@style/line_betweenitem" />
            <LinearLayout android:id="@id/school_area_layout" style="@style/info_item_frame">
                <TextView android:id="@id/school_area_tip" android:text="@string/school_area" android:ems="5" style="@style/info_item_left_tip_4c" />
                <TextView android:id="@id/school_area_tv" android:focusable="false" android:layout_marginLeft="@dimen/title_padding_left_right" android:hint="@string/school_area_hint" style="@style/info_item_content_tv" />
            </LinearLayout>
            <View style="@style/line_divideritem" />
            <LinearLayout android:id="@id/school_layout" style="@style/info_item_frame">
                <TextView android:id="@id/school_tip" android:text="@string/school" android:ems="5" style="@style/info_item_left_tip_4c" />
                <TextView android:id="@id/school_tv" android:focusable="false" android:layout_marginLeft="@dimen/title_padding_left_right" android:hint="@string/school_hint" style="@style/info_item_content_tv" />
            </LinearLayout>
            <View style="@style/line_divideritem" />
            <LinearLayout android:id="@id/colleges_layout" style="@style/info_item_frame">
                <TextView android:id="@id/colleges_tip" android:text="@string/departments" android:ems="5" style="@style/info_item_left_tip_4c" />
                <EditText android:id="@id/colleges_ed" android:layout_marginLeft="@dimen/title_padding_left_right" android:hint="@string/departments_hint" style="@style/info_item_content_ed" />
            </LinearLayout>
            <View style="@style/line_divideritem" />
            <LinearLayout android:id="@id/major_layout" style="@style/info_item_frame">
                <TextView android:id="@id/major_tip" android:text="@string/professiona" android:ems="5" style="@style/info_item_left_tip_4c" />
                <EditText android:id="@id/major_ed" android:layout_marginLeft="@dimen/title_padding_left_right" android:hint="@string/professiona_hint" style="@style/info_item_content_ed" />
            </LinearLayout>
            <View style="@style/line_divideritem" />
            <LinearLayout android:id="@id/enteryear_layout" style="@style/info_item_frame">
                <TextView android:id="@id/enteryear_tip" android:text="@string/enteryear" android:ems="5" style="@style/info_item_left_tip_4c" />
                <TextView android:id="@id/enteryear_tv" android:focusable="false" android:layout_marginLeft="@dimen/title_padding_left_right" android:hint="@string/enteryear_hint" style="@style/info_item_content_tv" />
            </LinearLayout>
            <View style="@style/line_divideritem" />
            <LinearLayout android:id="@id/education_layout" style="@style/info_item_frame">
                <TextView android:id="@id/education_tip" android:text="@string/education" android:ems="5" style="@style/info_item_left_tip_4c" />
                <TextView android:id="@id/education_tv" android:focusable="false" android:layout_marginLeft="@dimen/title_padding_left_right" android:hint="@string/education_hint" style="@style/info_item_content_tv" />
            </LinearLayout>
            <View style="@style/line_divideritem" />
            <TextView android:textColor="@color/grey_9f" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/title_padding_left_right" android:layout_marginTop="@dimen/title_padding_left_right" android:layout_marginRight="@dimen/title_padding_left_right" android:text="@string/friendly_hint" />
            <Button android:id="@id/schoolrollauth_btn" android:layout_marginLeft="@dimen/title_padding_left_right" android:layout_marginRight="@dimen/title_padding_left_right" android:text="下一步" style="@style/btn_common_margintop" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="vertical" android:id="@id/picker_layout" android:background="@color/grey_df" android:paddingBottom="@dimen/reg_padding" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/school_select_cancel" android:text="@string/cancel" style="@style/picker_btn_left" />
            <TextView android:id="@id/school_select_ok" android:text="@string/confirm" style="@style/picker_btn_right" />
        </RelativeLayout>
        <com.niuwa.niubei.view.piker.CityPicker android:gravity="bottom" android:layout_gravity="center" android:id="@id/citypicker" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>