<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/public_back_grey"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/layout_public_title" />
    <View style="@style/line_betweenitem" />
    <View style="@style/line_divideritem" />
    <LinearLayout style="@style/info_item_frame">
        <TextView android:text="@string/reg_tip_code" style="@style/info_item_left_tip_common" />
        <EditText android:id="@id/registration_code_ed" android:layout_marginLeft="@dimen/title_padding_left_right" android:hint="@string/registration_code_ed_hint" android:maxLength="50" android:digits="\ 0123456789" android:layout_weight="1.0" android:inputType="number" style="@style/info_item_content_ed" />
    </LinearLayout>
    <View style="@style/line_divideritem" />
    <TextView android:textColor="@color/blue" android:layout_gravity="right" android:id="@id/no_security_code_tv" android:padding="@dimen/title_padding_left_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_security_code" />
    <Button android:id="@id/submit_btn" android:layout_marginLeft="@dimen/title_padding_left_right" android:layout_marginTop="50.0dip" android:layout_marginRight="@dimen/title_padding_left_right" android:text="@string/submit" style="@style/btn_common_margintop" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/title_padding_left_right">
        <ImageView android:layout_gravity="center" android:layout_width="18.0dip" android:layout_height="18.0dip" android:src="@drawable/watch_out" android:contentDescription="@null" />
        <TextView android:gravity="left" android:layout_gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text="@string/submit_registration_code_tip" />
    </LinearLayout>
</LinearLayout>