<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/transparent" android:layout_width="@dimen/dialog_white_width" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/shape_regist_confirm_back" android:layout_width="@dimen/dialog_white_width" android:layout_height="wrap_content">
        <TextView android:textColor="@color/white" android:gravity="center" android:background="@drawable/shape_regist_confirm_title" android:layout_width="fill_parent" android:layout_height="@dimen/btn_ht" android:text="@string/info_confirm_again" />
        <LinearLayout android:id="@id/school_area_layout" style="@style/info_regist_dialog_fram">
            <TextView android:id="@id/school_area_tip" android:text="@string/school_location" android:ems="4" style="@style/info_item_left_tip_4c" />
            <TextView android:id="@id/dialog_school_area_tv" android:layout_marginLeft="@dimen/title_padding_left_right" style="@style/info_item_content_tv_right" />
        </LinearLayout>
        <LinearLayout android:id="@id/school_layout" style="@style/info_regist_dialog_fram">
            <TextView android:id="@id/school_tip" android:text="@string/school" android:ems="4" style="@style/info_item_left_tip_4c" />
            <TextView android:id="@id/dialog_school_tv" android:layout_marginLeft="@dimen/title_padding_left_right" style="@style/info_item_content_tv_right" />
        </LinearLayout>
        <LinearLayout android:id="@id/colleges_layout" style="@style/info_regist_dialog_fram">
            <TextView android:id="@id/colleges_tip" android:text="@string/departments" android:ems="4" style="@style/info_item_left_tip_4c" />
            <TextView android:id="@id/dialog_colleges_ed" android:layout_marginLeft="@dimen/title_padding_left_right" style="@style/info_item_content_tv_right" />
        </LinearLayout>
        <LinearLayout android:id="@id/major_layout" style="@style/info_regist_dialog_fram">
            <TextView android:id="@id/major_tip" android:text="@string/professiona" android:ems="4" style="@style/info_item_left_tip_4c" />
            <TextView android:id="@id/dialog_major_ed" android:layout_marginLeft="@dimen/title_padding_left_right" style="@style/info_item_content_tv_right" />
        </LinearLayout>
        <LinearLayout android:id="@id/enteryear_layout" style="@style/info_regist_dialog_fram">
            <TextView android:id="@id/enteryear_tip" android:text="@string/enteryear" android:ems="4" style="@style/info_item_left_tip_4c" />
            <TextView android:id="@id/dialog_enteryear_tv" android:layout_marginLeft="@dimen/title_padding_left_right" style="@style/info_item_content_tv_right" />
        </LinearLayout>
        <LinearLayout android:id="@id/education_layout" style="@style/info_regist_dialog_fram">
            <TextView android:id="@id/education_tip" android:text="@string/education" android:ems="4" style="@style/info_item_left_tip_4c" />
            <TextView android:id="@id/dialog_education_tv" android:layout_marginLeft="@dimen/title_padding_left_right" style="@style/info_item_content_tv_right" />
        </LinearLayout>
        <Button android:id="@id/dialog_schoolrollauth_btn" android:layout_height="@dimen/btn_ht" android:layout_marginLeft="@dimen/login_edittext_margintop" android:layout_marginTop="@dimen/title_headpic_padding_left_right" android:layout_marginRight="@dimen/login_edittext_margintop" android:layout_marginBottom="@dimen/login_edittext_margintop" android:text="@string/info_confirm" style="@style/btn_common" />
    </LinearLayout>
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/dialog_close_image" android:background="@drawable/close_icon" android:clickable="true" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginTop="18.0dip" />
</LinearLayout>