<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/public_back_grey"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/layout_public_title" />
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:overScrollMode="never">
        <LinearLayout android:layout_marginTop="0.0dip" style="@style/public_main_frame">
            <View android:layout_marginTop="@dimen/setting_item_top" style="@style/line_divideritem" />
            <RelativeLayout android:id="@id/setting_phone_number_layout" style="@style/info_item_frame">
                <TextView android:text="@string/setting_phone_number" style="@style/info_item_left_tip_4c" />
                <ImageView android:id="@id/item_arrow_icon" style="@style/info_item_arrow_icon" />
                <TextView android:id="@id/phone_number_tv" android:layout_toLeftOf="@id/item_arrow_icon" style="@style/info_item_left_tip_common" />
            </RelativeLayout>
            <View style="@style/line_divideritem" />
            <RelativeLayout android:id="@id/setting_item1_layout" style="@style/info_item_frame">
                <TextView android:text="@string/setting_item1" style="@style/info_item_left_tip_4c" />
                <ImageView style="@style/info_item_arrow_icon" />
            </RelativeLayout>
            <View style="@style/line_divideritem" />
            <View android:layout_marginTop="@dimen/setting_item_top" style="@style/line_divideritem" />
            <RelativeLayout android:id="@id/setting_item2_layout" style="@style/info_item_frame">
                <TextView android:text="@string/setting_item2" style="@style/info_item_left_tip_4c" />
                <ImageView style="@style/info_item_arrow_icon" />
            </RelativeLayout>
            <View style="@style/line_divideritem" />
            <RelativeLayout android:id="@id/setting_item3_layout" style="@style/info_item_frame">
                <TextView android:text="@string/setting_item3" style="@style/info_item_left_tip_4c" />
                <ImageView style="@style/info_item_arrow_icon" />
            </RelativeLayout>
            <View style="@style/line_divideritem" />
            <RelativeLayout android:id="@id/setting_item4_layout" style="@style/info_item_frame">
                <TextView android:id="@id/version_tip" android:layout_height="wrap_content" android:text="@string/setting_item4" android:layout_centerVertical="true" style="@style/info_item_left_tip_4c" />
                <View android:id="@id/setting_version_dot_img" android:background="@drawable/shape_dot_money_tree" android:visibility="gone" android:layout_width="8.0dip" android:layout_height="8.0dip" android:layout_toRightOf="@id/version_tip" android:layout_alignTop="@id/version_tip" android:layout_centerVertical="true" />
                <TextView android:textColor="@color/grey_9f" android:id="@id/setting_version_tv" android:layout_marginRight="2.0dip" android:layout_alignParentRight="true" style="@style/info_item_content_tv_right" />
            </RelativeLayout>
            <View style="@style/line_divideritem" />
            <View android:layout_marginTop="@dimen/setting_item_top" style="@style/line_divideritem" />
            <RelativeLayout android:id="@id/setting_item5_layout" style="@style/info_item_frame">
                <TextView android:text="@string/setting_item5" style="@style/info_item_left_tip_4c" />
                <ImageView style="@style/info_item_arrow_icon" />
            </RelativeLayout>
            <View style="@style/line_divideritem" />
            <RelativeLayout android:id="@id/setting_item6_layout" style="@style/info_item_frame">
                <TextView android:text="@string/setting_item6" style="@style/info_item_left_tip_4c" />
                <ImageView android:id="@id/item_connect_arrow_icon" style="@style/info_item_arrow_icon" />
                <TextView android:id="@id/connect_phone_number_tv" android:text="@string/setting_service_tel" android:layout_toLeftOf="@id/item_connect_arrow_icon" style="@style/info_item_left_tip_common" />
            </RelativeLayout>
            <View style="@style/line_divideritem" />
            <View android:layout_marginTop="@dimen/setting_item_top" style="@style/line_divideritem" />
            <RelativeLayout android:id="@id/setting_item7_layout" style="@style/info_item_frame">
                <TextView android:text="@string/setting_item7" style="@style/info_item_left_tip_4c" />
                <ImageView style="@style/info_item_arrow_icon" />
            </RelativeLayout>
            <View style="@style/line_divideritem" />
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/setting_item_top" android:text="客服服务时间" />
                <TextView android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="工作日  9:00-21:00" />
                <TextView android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/setting_item_top" android:text="节假日  9:00-18:00" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>