<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" style="@style/public_back_grey"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/layout_public_title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/title_ht">
        <LinearLayout android:layout_marginTop="0.0dip" style="@style/public_main_frame">
            <View style="@style/line_betweenitem" />
            <View style="@style/line_divideritem" />
            <LinearLayout android:id="@id/editor_name_layout" style="@style/info_item_frame">
                <TextView android:text="@string/tip_real_name" style="@style/info_item_left_tip_4c" />
                <TextView android:id="@id/editor_name_tv" style="@style/info_item_content_tv_right" />
                <ImageView style="@style/info_item_arrow_icon" />
            </LinearLayout>
            <View style="@style/line_divideritem" />
            <LinearLayout android:id="@id/editor_sex_layout" style="@style/info_item_frame">
                <TextView android:text="@string/sex" style="@style/info_item_left_tip_4c" />
                <TextView android:id="@id/editor_sex_tv" style="@style/info_item_content_tv_right" />
                <ImageView style="@style/info_item_arrow_icon" />
            </LinearLayout>
            <View style="@style/line_divideritem" />
            <LinearLayout android:id="@id/editor_certno_layout" style="@style/info_item_frame">
                <TextView android:text="@string/tip_input_idcard" style="@style/info_item_left_tip_4c" />
                <TextView android:id="@id/editor_certno_tv" style="@style/info_item_content_tv_right" />
                <ImageView style="@style/info_item_arrow_icon" />
            </LinearLayout>
            <View style="@style/line_divideritem" />
            <LinearLayout android:id="@id/editor_birthday_layout" style="@style/info_item_frame">
                <TextView android:text="@string/birthday" style="@style/info_item_left_tip_4c" />
                <TextView android:id="@id/editor_birthday_tv" style="@style/info_item_content_tv_right" />
                <ImageView style="@style/info_item_arrow_icon" />
            </LinearLayout>
            <View style="@style/line_divideritem" />
            <LinearLayout android:id="@id/editor_constellation_layout" style="@style/info_item_frame">
                <TextView android:text="@string/constellationl" style="@style/info_item_left_tip_4c" />
                <TextView android:id="@id/editor_constellation_tv" style="@style/info_item_content_tv_right" />
                <ImageView android:visibility="invisible" style="@style/info_item_arrow_icon" />
            </LinearLayout>
            <View style="@style/line_divideritem" />
            <LinearLayout android:id="@id/editor_relationship_layout" style="@style/info_item_frame">
                <TextView android:text="@string/relationship" style="@style/info_item_left_tip_4c" />
                <TextView android:id="@id/editor_relationship_tv" style="@style/info_item_content_tv_right" />
                <ImageView style="@style/info_item_arrow_icon" />
            </LinearLayout>
            <View style="@style/line_divideritem" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>