<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/layout_share_main" android:background="@color/dialog_black_back" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/firstView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/botom" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/botom" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:id="@id/guide_main_cameraUploadBtn" android:layout_marginLeft="@dimen/reg_padding" android:layout_marginTop="16.0dip" android:layout_marginRight="@dimen/reg_padding" android:text="@string/photo_upload_text" style="@style/btn_common" />
        <Button android:id="@id/guide_main_albumsBtn" android:layout_marginLeft="@dimen/reg_padding" android:layout_marginTop="16.0dip" android:layout_marginRight="@dimen/reg_padding" android:text="@string/albums_upload_text" style="@style/btn_common" />
        <Button android:id="@id/guide_main_cancelBtn" android:layout_marginLeft="@dimen/reg_padding" android:layout_marginTop="16.0dip" android:layout_marginRight="@dimen/reg_padding" android:layout_marginBottom="16.0dip" android:text="@string/cancel" style="@style/btn_common" />
    </LinearLayout>
</RelativeLayout>